50% done front edn dev track on 11/19/24

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <div class="header-content-wrapper">
       <img src="img/logo.png" alt="Skillcrush" id="logo">
       <h1>Big Bad Guide to the Flexbox Model Worksheet</h1>
+      <!--  50% completed on Front End Developer on 11/19/2024  -->
     </div>
   </header>
 
